--- a/dev_work_bootstrap/tasks/languages/ruby.yaml
+++ b/dev_work_bootstrap/tasks/languages/ruby.yaml
@@ -1,4 +1,3 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/ansible/ansible-lint/main/src/ansiblelint/schemas/ansible.json#/$defs/tasks
 - name: Install rbenv # noqa: latest[git]
   tags:
@@ -7,3 +6,14 @@
     repo: https://github.com/rbenv/rbenv.git
     dest: $HOME/.rbenv
     update: true
+- name: Ensure rbenv plugins directory exists
+  ansible.builtin.file:
+    type: directory
+    path: $HOME/.rbenv/plugins
+    mode: "0755"
+- name: Install rbenv-build
+  tags:
+    - rbenv-build
+  ansible.builtin.git:
+    repo: https://github.com/rbenv/ruby-build.git
+    dest: $HOME/.rbenv/plugins/ruby-build
